--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -135,37 +135,37 @@
     }
     
     // Les badges
-    .js {
+    .Javascript {
         background-color: rgba(251, 255, 0, 0.445);
         @include F1()
     }
     
-    .css {
+    .CSS {
         background-color: rgba(245, 24, 0, 0.555);
         @include F1()
     }
     
-    .html {
+    .HTML {
         background-color: rgba(17, 0, 255, 0.466);
         @include F1()
     }
     
-    .bootstrap {
+    .Bootstrap {
         background-color: rgba(5, 0, 73, 0.274);
         @include F1()
     }
     
-    .wp {
+    .WordPress {
         background-color: rgba(0, 176, 230, 0.493);
         @include F1()
     }
     
-    .react {
+    .React {
         background-color: #62dafb75;
         @include F1()
     }
     
-    .php {
+    .PHP {
         background-color: #9062fb79;
         @include F1()
     }
