--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -172,18 +172,19 @@
     
     // Travail sur le footer
     footer {
-        .creators_conteneur {
-            position: absolute;
-            right: 0;
-            top: 0;
+        p {
+            margin-left: 0;
+            margin-top: auto;
+            margin-bottom: auto;
+            text-align: right;
+        }
+        .center {
+            margin-left: auto;
+            margin-right: auto;
         }
         .copyrighter {
             position: absolute;
-            right: 0;
             bottom: 0;
-        }
-        img {
-            text-align: left;
-            height: 35px;
+            right: 50px;
         }
     }
