--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,7 @@
   body {
     margin: 0;
     overflow-y: hidden;
+    background-color: #111111 !important;
   }
   .icone {
     width: 25px;
@@ -28,13 +29,13 @@
     height: 88vh;
     padding: 50px;
     margin-bottom: 25px;
-    background-color: rgba(230, 230, 230, 0.23);
+    background-color: #111111 !important;
   }
   section::-webkit-scrollbar {
-    width: 5px;
+    width: 15px;
   }
   section::-webkit-scrollbar-track {
-    border: 1px solid #00a2d8;
+    border: 1px solid #002a38;
     border-radius: 10px;
   }
   section::-webkit-scrollbar-track-piece {
@@ -42,11 +43,11 @@
     border-radius: 10px;
   }
   section::-webkit-scrollbar-thumb {
-    background-color: rgba(0, 162, 216, 0.548);
+    background-color: black;
     border-radius: 10px;
   }
   section::-webkit-scrollbar-thumb:hover {
-    background-color: #00a2d8;
+    background-color: #002a38;
   }
   section .row {
     margin-right: 0 !important;
@@ -62,15 +63,17 @@
             transform: scale(1);
     -webkit-transition: all 0.9s;
     transition: all 0.9s;
+    background-color: #272727;
   }
   section a .card .card-title {
-    left: 0;
+    left: 0px;
+    margin-left: 10px;
     top: 0;
     z-index: 2;
     font-size: 0.8rem;
     width: 60%;
-    color: black;
-    text-shadow: 0 1px 0 #00a2d8;
+    color: white;
+    text-shadow: 0 1px 0 #002a38;
   }
   section a .card .card-img-top {
     z-index: 2;
@@ -109,7 +112,7 @@
     width: 50%;
     position: absolute;
     z-index: 0;
-    text-shadow: white 1px 1px, white -1px 1px, white -1px -1px, white 1px -1px;
+    text-shadow: black 1px 1px, black -1px 1px, black -1px -1px, black 1px -1px;
   }
   section a .card .card-body .card-text span {
     vertical-align: middle;
@@ -151,6 +154,7 @@
   body {
     margin: 0;
     overflow-y: hidden;
+    background-color: #141414 !important;
   }
   .icone {
     width: 25px;
@@ -165,13 +169,13 @@
     height: 88vh;
     padding: 50px;
     margin-bottom: 25px;
-    background-color: rgba(230, 230, 230, 0.23);
+    background-color: #141414 !important;
   }
   section::-webkit-scrollbar {
-    width: 5px;
+    width: 15px;
   }
   section::-webkit-scrollbar-track {
-    border: 1px solid #00a2d8;
+    border: 1px solid #002a38;
     border-radius: 10px;
   }
   section::-webkit-scrollbar-track-piece {
@@ -179,17 +183,17 @@
     border-radius: 10px;
   }
   section::-webkit-scrollbar-thumb {
-    background-color: rgba(0, 162, 216, 0.548);
+    background-color: black;
     border-radius: 10px;
   }
   section::-webkit-scrollbar-thumb:hover {
-    background-color: #00a2d8;
+    background-color: #002a38;
   }
   section .row {
     margin-right: 0 !important;
   }
   section a .card {
-    border: 1px solid black;
+    border: 1px solid white;
     padding: 5px;
     margin-bottom: 10px;
     width: 60vw;
@@ -199,15 +203,17 @@
             transform: scale(1);
     -webkit-transition: all 0.9s;
     transition: all 0.9s;
+    background-color: #272727;
   }
   section a .card .card-title {
     left: 0;
+    margin-left: 10px;
     top: 0;
     z-index: 2;
     font-size: 2.1vh;
     width: 60%;
-    color: black;
-    text-shadow: 0 1px 0 #00a2d8;
+    color: white;
+    text-shadow: 0 1px 0 black;
   }
   section a .card .card-img-top {
     z-index: 2;
@@ -246,7 +252,7 @@
     width: 65%;
     position: absolute;
     z-index: 0;
-    text-shadow: white 1px 1px, white -1px 1px, white -1px -1px, white 1px -1px;
+    text-shadow: black 1px 1px, black -1px 1px, black -1px -1px, black 1px -1px;
   }
   section a .card .card-body .card-text span {
     vertical-align: middle;
@@ -340,9 +346,13 @@
   font-weight: bold;
 }
 
+.GEN {
+  background-color: #ffffff79;
+}
+
 footer a {
   color: black;
-  background-color: #00a2d8;
+  background-color: #002a38;
 }
 
 footer a:hover {
