--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,6 +1,6 @@
     $C1:black;
     $C2:rgb(255, 255, 255);
-    $C3:rgba(0, 162, 216, 1);
+    $C3:rgb(0, 42, 56);
     @mixin F1() {
         color: $C1;
         font-family: 'Kalam', cursive;
@@ -27,6 +27,7 @@
         body {
             margin: 0;
             overflow-y: hidden;
+            background-color: rgb(17, 17, 17) !important;
         }
         .icone {
             width: 25px;
@@ -40,9 +41,9 @@
             height: 88vh;
             padding: 50px;
             margin-bottom: 25px;
-            background-color: rgba(230, 230, 230, 0.23);
+            background-color: rgb(17, 17, 17) !important;
             &::-webkit-scrollbar {
-                width: 5px;
+                width: 15px;
             }
             &::-webkit-scrollbar-track {
                 border: 1px solid $C3;
@@ -53,7 +54,7 @@
                 border-radius: 10px;
             }
             &::-webkit-scrollbar-thumb {
-                background-color: rgba(0, 162, 216, 0.548);
+                background-color: black;
                 border-radius: 10px;
                 &:hover {
                     background-color: $C3;
@@ -72,13 +73,15 @@
                     margin: 10px;
                     transform: scale(1.0);
                     transition: all 0.9s;
+                    background-color: rgb(39, 39, 39);
                     .card-title {
-                        left: 0;
+                        left: 0px;
+                        margin-left: 10px;
                         top: 0;
                         z-index: 2;
                         font-size: 0.8rem;
                         width: 60%;
-                        color: $C1;
+                        color: $C2;
                         text-shadow: 0 1px 0 $C3;
                     }
                     .card-img-top {
@@ -110,7 +113,7 @@
                             width: 50%;
                             position: absolute;
                             z-index: 0;
-                            text-shadow: $C2 1px 1px, $C2 -1px 1px, $C2 -1px -1px, $C2 1px -1px;
+                            text-shadow: $C1 1px 1px, $C1 -1px 1px, $C1 -1px -1px, $C1 1px -1px;
                             span {
                                 vertical-align: middle;
                                 font-size: 1.1em;
@@ -152,6 +155,7 @@
         body {
             margin: 0;
             overflow-y: hidden;
+            background-color: rgb(20, 20, 20) !important;
         }
         .icone {
             width: 25px;
@@ -165,9 +169,9 @@
             height: 88vh;
             padding: 50px;
             margin-bottom: 25px;
-            background-color: rgba(230, 230, 230, 0.23);
+            background-color: rgb(20, 20, 20) !important;
             &::-webkit-scrollbar {
-                width: 5px;
+                width: 15px;
             }
             &::-webkit-scrollbar-track {
                 border: 1px solid $C3;
@@ -178,7 +182,7 @@
                 border-radius: 10px;
             }
             &::-webkit-scrollbar-thumb {
-                background-color: rgba(0, 162, 216, 0.548);
+                background-color: black;
                 border-radius: 10px;
                 &:hover {
                     background-color: $C3;
@@ -189,7 +193,7 @@
             }
             a {
                 .card {
-                    border: 1px solid $C1;
+                    border: 1px solid $C2;
                     padding: 5px;
                     margin-bottom: 10px;
                     width: 60vw;
@@ -197,14 +201,16 @@
                     margin: 10px;
                     transform: scale(1.0);
                     transition: all 0.9s;
+                    background-color: #272727;
                     .card-title {
                         left: 0;
+                        margin-left: 10px;
                         top: 0;
                         z-index: 2;
                         font-size: 2.1vh;
                         width: 60%;
-                        color: $C1;
-                        text-shadow: 0 1px 0 $C3;
+                        color: $C2;
+                        text-shadow: 0 1px 0 $C1;
                     }
                     .card-img-top {
                         z-index: 2;
@@ -235,7 +241,7 @@
                             width: 65%;
                             position: absolute;
                             z-index: 0;
-                            text-shadow: $C2 1px 1px, $C2 -1px 1px, $C2 -1px -1px, $C2 1px -1px;
+                            text-shadow: $C1 1px 1px, $C1 -1px 1px, $C1 -1px -1px, $C1 1px -1px;
                             span {
                                 vertical-align: middle;
                                 font-size: 1.5vh;
@@ -306,6 +312,10 @@
     .PHP {
         background-color: #9062fb79;
         @include F1()
+    }
+    
+    .GEN {
+        background-color: #ffffff79;
     }
     
     // Travail sur le footer
