--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,20 @@ body {
   overflow: hidden;
 }
 
+.searcher select {
+  width: 95px;
+}
+
+.searcher input {
+  width: 35vw;
+}
+
+.searcher button {
+  width: 50px;
+  height: 50px;
+  margin: 0;
+}
+
 @media (orientation: landscape) {
   .scrollbar {
     margin-top: 15px;
@@ -156,8 +170,8 @@ body {
   .scrollbar {
     margin-top: 15px;
     overflow-y: scroll;
-    height: 80vh;
-    margin: 10px 10px;
+    height: 78vh;
+    margin: 5px 5px;
   }
   .scrollbar section {
     -webkit-box-orient: vertical !important;
@@ -398,6 +412,26 @@ body {
   background: transparent;
 }
 
+footer {
+  background-color: #343a40 !important;
+  text-align: center;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+
+footer p {
+  color: white;
+}
+
+footer p a {
+  color: grey;
+}
+
+footer p a:hover {
+  color: #a0a0a0;
+}
+
 h1 {
   color: white;
   text-align: center;
@@ -433,7 +467,7 @@ h1 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 50vw;
+  width: 60vw;
   margin: auto auto;
 }
 
@@ -442,6 +476,7 @@ h1 {
   text-align: center;
   border: 2px grey solid;
   width: 50%;
+  padding: 0;
 }
 
 .presentation .separation ul li {
