--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -424,6 +424,12 @@ footer p {
   color: white;
 }
 
+@media only screen and (max-width: 600px) {
+  footer p {
+    font-size: 2.1vw;
+  }
+}
+
 footer p a {
   color: grey;
 }
