--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -316,6 +316,9 @@ footer {
     width: 100%;
     p {
         color: white;
+        @media only screen and (max-width: 600px) {
+            font-size: 2.1vw;
+        }
         a {
             color: grey;
             &:hover {
