--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -236,6 +236,9 @@ body {
             flex: none;
     height: 100px;
   }
+  .scrollbar section a .ensemble .part_un h3 {
+    font-size: 5vw;
+  }
   .scrollbar section a .ensemble .part_un p {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -248,6 +251,7 @@ body {
         -ms-flex-pack: center;
             justify-content: center;
     text-align: center;
+    font-size: 2.5vw;
   }
   .scrollbar section a .ensemble .part_deux {
     border-left: 1px solid white;
