--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -180,11 +180,15 @@ body {
                         max-width: none !important;
                         flex: none;
                         height: 100px;
+                        h3 {
+                            font-size: 5vw;
+                        }
                         p {
                             display: flex;
                             flex-direction: column;
                             justify-content: center;
                             text-align: center;
+                            font-size: 2.5vw;
                         }
                     }
                     .part_deux {
