--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -25,7 +25,7 @@ $C3:rgb(0, 42, 56);
 }
 
 body {
-    background-color: rgb(27, 27, 27);
+    background-color: #1b1b1b;
     overflow: hidden;
 }
 
